...
    
    var body: some View {
        TabView {

            FortyGridView()
                .tabItem {
                    Label("Grid", systemImage: "square.grid.3x3")
                }
            
            SavedGridsListView()
                .tabItem {
                    Label("Saved", systemImage: "book.pages")
                }
            
            SettingsView()
                .tabItem {
                    Label("Settings", systemImage: "lines.measurement.vertical")
                }
...
